--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="enter_your_name">Enter your name</string>
     <string name="change">Change</string>
     <string name="hello_world">Hello World!</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
